// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip align 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="mdc-tooltip"
    id="tooltip-id"
    role="tooltip"
  >
    <div
      class="mdc-tooltip__surface mdc-tooltip__surface-animation"
    >
      tooltip
    </div>
  </div>
  <span
    aria-describedby="tooltip-id"
    class=""
    data-tooltip-id="tooltip-id"
  >
    test
  </span>
</DocumentFragment>
`;

exports[`Tooltip renders 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="mdc-tooltip mdc-tooltip--shown mdc-tooltip--showing"
    data-mdc-tooltip-persistent="true"
    id="tooltip-id"
    role="tooltip"
    style="top: 4px; left: 0px;"
  >
    <div
      class="mdc-tooltip__surface mdc-tooltip__surface-animation"
      style="transform-origin: center top;"
    >
      tooltip
    </div>
  </div>
  <span
    aria-describedby="tooltip-id"
    class=""
    data-tooltip-id="tooltip-id"
  >
    test
  </span>
</DocumentFragment>
`;
